cabal-version:      2.4
name:               TikTakToe
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             marcopolo1124
maintainer:         85742840+marcopolo1124@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , containers ^>=0.6.5.1
                    , mtl ^>= 2.2.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable TikTakToe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        containers ^>=0.6.5.1,
        mtl ^>= 2.2.2,
        TikTakToe

    hs-source-dirs:   app
    default-language: Haskell2010
